# cs207ddl

./: .coverage  README.md  js.json  memo.txt  run.py  setup.cfg  setup.py  setup.sh  setupEC2.sh  setup_DB.py  setupall.sh
.cache/v/cache/: lastfailed
API/: genMeta.py
API/app/: models.py  views.py
API/app/templates/: base.html  index.html
conf/: app_server_nginx.conf
glacierscse.egg-info/: PKG-INFO  SOURCES.txt
scripts/: cs207_aws_ec2_stack.sh  serversetup.sh  setupAll.sh  setupAll_package.sh  setuppackage.sh
sockets/: Server.py  Server_old.py  error.py  serialization.py  tsdb_op.py
tests/: test_API.py  test_Server.py
