[metadata]
name = A_project_package
summary = A test project that was set up with PyScaffold
author = GlaciersCSE
author-email = yifan_wang@g.harvard.edu
license = CSE
home-page = https://github.com/glacierscse/cs207ddl
description-file = README.md
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: ddl - 2
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Environment :: Console
    Operating System :: MacOS
[entry_points]
# Add here console scripts like:
console_scripts =
#    run_my_project = my_project.cli:run
# as well as other entry_points.

[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of source and target:
packages =
    [‘API’, ‘p7_simsearch’, ‘socket’, ‘timeseries’]
#data_files =
#    share/my_project/docs = docs/*

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2
#    RXP
#ALL =
#    django
#    cookiecutter

[pytest]
#addopts = --cov-report term-missing --cov timeseries/TimeSeries.py timeseries/tests.py
#addopts = --cov-report term-missing --cov timeseries/ArrayTimeSeries.py timeseries/test_arrayTS.py
#addopts = --cov-report term-missing --cov timeseries/SimulatedTimeSeries.py tests/test_simulatedTS.py 
#addopts = --cov-report term-missing --cov timeseries/ tests/
addopts = --cov-report term-missing --cov sockets/ tests/test_Server.py


[aliases]
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
# Options for Sphinx build
source_dir = docs
build_dir = docs/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
